fixed image width, still need to align images and fix words to be more visible, need to add prompts that let the user know that they got the answer correct.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h1{
 
 #display-image{
     height: 300px;
-    width: 300px;
+    width: 250px;
     margin:30px;
 }
 
